<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:stretchColumns="1">

        <RelativeLayout

            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/drink"
            tools:context="com.example.android.firstprojectcafe.MainActivity">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="cursive"
                    android:gravity="center"
                    android:text="@string/title"
                    android:textColor="#FFFFFF"
                    android:textSize="60sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:layout_marginTop="110dp"
                android:background="#ffffff"
                android:gravity="center"
                android:orientation="vertical"

                >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="serif"
                    android:gravity="center"
                    android:lineSpacingMultiplier="1.2"
                    android:padding="16dp"
                    android:text="@string/description"
                    android:textColor="#3E2723"
                    android:textSize="15sp"

                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="serif"
                    android:paddingLeft="20dp"
                    android:paddingTop="10dp"
                    android:text="@string/phone"
                    android:textColor="#3E2723"
                    android:textSize="15sp"

                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="serif"
                    android:paddingLeft="20dp"
                    android:paddingTop="10dp"
                    android:text="@string/website"
                    android:textColor="#3E2723"
                    android:textSize="15sp"

                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="serif"
                    android:paddingLeft="20dp"
                    android:paddingTop="10dp"
                    android:text="@string/address"
                    android:textColor="#3E2723"
                    android:textSize="15sp"

                    />

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="left"
                    android:paddingBottom="5dp"
                    android:paddingTop="10dp"
                    android:src="@drawable/cup" />


            </LinearLayout>


        </RelativeLayout>
    </TableLayout>

</ScrollView>
